force-app/main/default/objects/Budget__c/fields/Cust_Name__c.field-meta.xml
<CustomField>
    <fullName>Cust_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cust Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>