force-app/main/default/objects/Budget__c/fields/GP_LB__c.field-meta.xml
<CustomField>
    <fullName>GP_LB__c</fullName>
    <label>GP/LB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>