force-app/main/default/objects/Budget__c/fields/HW_Internal_Prd_Grp_Name__c.field-meta.xml
<CustomField>
    <fullName>HW_Internal_Prd_Grp_Name__c</fullName>
    <label>HW Internal Prd Grp Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMF / Butteroil</fullName>
            </value>
            <value>
                <fullName>Bluegrass and other products</fullName>
            </value>
            <value>
                <fullName>Butter Products</fullName>
            </value>
            <value>
                <fullName>Butter Products LSDP</fullName>
            </value>
            <value>
                <fullName>Buttermilk</fullName>
            </value>
            <value>
                <fullName>Caseins &amp; Caseinates</fullName>
            </value>
            <value>
                <fullName>Cheeses</fullName>
            </value>
            <value>
                <fullName>Cream Products LSDP</fullName>
            </value>
            <value>
                <fullName>Fluid Products</fullName>
            </value>
            <value>
                <fullName>Fluid Products LSDP</fullName>
            </value>
            <value>
                <fullName>Lactose</fullName>
            </value>
            <value>
                <fullName>Milk Protein Concentrate</fullName>
            </value>
            <value>
                <fullName>Misc. Blends</fullName>
            </value>
            <value>
                <fullName>Misc. Blends LSDP</fullName>
            </value>
            <value>
                <fullName>Nonfat Dry Milk</fullName>
            </value>
            <value>
                <fullName>Nonfat Dry Milk LSDP</fullName>
            </value>
            <value>
                <fullName>Permeate</fullName>
            </value>
            <value>
                <fullName>Whey</fullName>
            </value>
            <value>
                <fullName>Whey Protein Concentrate34</fullName>
            </value>
            <value>
                <fullName>Whey Protein Concentrate50+</fullName>
            </value>
            <value>
                <fullName>Whole Milk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>