force-app/main/default/objects/Budget__c/fields/PM_Annual_Forecast__c.field-meta.xml
<CustomField>
    <fullName>PM_Annual_Forecast__c</fullName>
    <label>PM Annual Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>